# mailx

./: COPYING  Makefile  aux.c  base64.c  cache.c  cmd1.c  cmd2.c  cmd3.c  cmdtab.c  collect.c  config.h  def.h  dotlock.c  edit.c  extern.h  fio.c  getname.c  getopt.c  glob.h  head.c  hmac.c  imap.c  imap_gssapi.c  imap_search.c  junk.c  lex.c  list.c  lzw.c  macro.c  maildir.c  mailx.1  main.c  makeconfig  md5.c  meson.build  mime.c  names.c  nsserr.c  openssl.c  pop3.c  (+13 more)
.github/workflows/: main.yml
catd/: en_US
